Adding the full three examples

--- a/index.html
+++ b/index.html
@@ -4,11 +4,36 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/.css" />
-    <link rel="icon" type="image/png" href="img/.png" />
-    <title>Document</title>
+    <link rel="stylesheet" href="css/general.css" />
+    <title>JavaScript på nye måder</title>
   </head>
   <body>
-    <script src="js/.js"></script>
+    <h1>JavaScript på lidt nye måder</h1>
+    <section>
+      <article>
+        <h2>Template literals</h2>
+        <div id="builtParagraf">
+          <p>Her er den gamle paragraf</p>
+        </div>
+      </article>
+      <button id="builtBtn">Ny tekst</button>
+      <hr />
+      <article>
+        <h2>Brug ternary operator i if-sætninger</h2>
+        <p id="mainTxt">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam quam repudiandae facilis accusamus tempore earum maxime vero. Quibusdam dicta eos, est dolor iste praesentium doloremque.</p>
+        <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Operators/Conditional_operator" target="_blank"">Læs mere på MDN</a>
+      </article>
+      <button id="switchBtn">Activate</button>
+      <hr />
+      <article id="newArticle">
+        <h2 id="newHeadline"></h2>
+        <p id="newParagraf"></p>
+        <a id="newLink" href="#"></a>
+      </article>
+      <button id="headBtn">Add a headline</button>
+      <button id="paraBtn">Add a paragraf</button>
+      <button id="linkBtn">Add a link</button>
+    </section>
+    <script src="js/main.js"></script>
   </body>
 </html>
